--- a/app/src/main/res/menu/menu_wifi.xml
+++ b/app/src/main/res/menu/menu_wifi.xml
@@ -5,24 +5,21 @@
 
 
     <item
-        android:id="@+id/action_update"
-        android:icon="@mipmap/ic_refresh_white_36dp"
-        android:orderInCategory="100"
-        android:title="@string/action_update"
+        android:id="@+id/action_record"
+        android:icon="@drawable/ic_history_white_24dp"
+        android:orderInCategory="90"
+        android:title="@string/action_record"
         app:showAsAction="ifRoom" />
 
 
     <item
         android:id="@+id/action_about"
-        android:orderInCategory="205"
+        android:icon="@drawable/ic_portrait_white_24dp"
+        android:orderInCategory="100"
         android:title="@string/action_about"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="205"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+
 
 
 
